--- a/v2ex-web/src/main/webapp/WEB-INF/views/head.html
+++ b/v2ex-web/src/main/webapp/WEB-INF/views/head.html
@@ -33,8 +33,8 @@
                 <%
                 	else {
                 %>
-	                <a href="/signup" class="top">注册</a>&nbsp;&nbsp;&nbsp;
-	                <a href="/signin" class="top">登录</a>
+	                <a href="${ctxPath}/signup" class="top">注册</a>&nbsp;&nbsp;&nbsp;
+	                <a href="${ctxPath}/signin" class="top">登录</a>
                 <% } %>
               </td>
             </tr>
