--- a/v2ex-web/src/main/webapp/WEB-INF/views/user_operation.html
+++ b/v2ex-web/src/main/webapp/WEB-INF/views/user_operation.html
@@ -84,10 +84,10 @@
                         </div>
                         <div class="inner">
                             <div class="sep5"></div>
-                            <div align="center"><a href="/signup" class="super normal button">现在注册</a>
+                            <div align="center"><a href="${ctxPath}/signup" class="super normal button">现在注册</a>
                             <div class="sep5"></div>
                             <div class="sep10"></div>
-                            已注册用户请 &nbsp;<a href="/signin">登录</a></div>
+                            已注册用户请 &nbsp;<a href="${ctxPath}/signin">登录</a></div>
                         </div>
                     </div>
        <% } %>  
