--- a/v2ex-web/src/main/webapp/WEB-INF/views/index.html
+++ b/v2ex-web/src/main/webapp/WEB-INF/views/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" type="text/css" href="${ctxPath}/static/css/style.css" />
 </head>
 <body>
-<% include("head.html"){} %>
+<% include("head.html",{currentUser:currentUser!}){} %>
 <div id="Wrapper">
   <div class="content">
     <div id="Leftbar"></div>
-    <% include("right.html"){} %>
+    <% include("right.html",{currentUser:currentUser!}){} %>
     <% include("main.html"){} %>
   </div>
   <div class="c"></div>
