修改登录之后的显示。 1. 在beetl中如果从session中获取数据需要使用session.user这种方式 2. 在beetl中判断一个对象时候存在使用isNotEmpty(session.user),has只是用于判断全局变量 3. 比如在inclde("head.html",{user:user!});中，这个user在head.html中就属于全局变量

--- a/v2ex-web/src/main/webapp/WEB-INF/views/head.html
+++ b/v2ex-web/src/main/webapp/WEB-INF/views/head.html
@@ -21,9 +21,9 @@
               <td width="570" align="right" style="padding-top: 2px;">
                 <a href="/" class="top">首页</a>&nbsp;&nbsp;&nbsp;
                 <%
-                	if(has(currentUser)) {
+                	if(isNotEmpty(session.currentUser)) {
                 %>
-	                <a href="/member/thinkmore" class="top">thinkmore</a>&nbsp;&nbsp;&nbsp;
+	                <a href="/member/thinkmore" class="top">${session.currentUser.name}</a>&nbsp;&nbsp;&nbsp;
 	                <a href="https://workspace.v2ex.com/" target="_blank" class="top">工作空间</a>&nbsp;&nbsp;&nbsp;
 	                <a href="/notes" class="top">记事本</a>&nbsp;&nbsp;&nbsp;
 	                <a href="/t" class="top">时间轴</a>&nbsp;&nbsp;&nbsp;
