处理include报错问题，以及添加ctxPath

--- a/v2ex-web/src/main/webapp/WEB-INF/views/head.html
+++ b/v2ex-web/src/main/webapp/WEB-INF/views/head.html
@@ -28,7 +28,7 @@
 	                <a href="/notes" class="top">记事本</a>&nbsp;&nbsp;&nbsp;
 	                <a href="/t" class="top">时间轴</a>&nbsp;&nbsp;&nbsp;
 	                <a href="/settings" class="top">设置</a>&nbsp;&nbsp;&nbsp;
-	                <a href="#;" onclick="if (confirm('确定要从 V2EX 登出？')) { location.href= '/signout?once=36590'; }" class="top">登出</a>
+	                <a href="#;" onclick="if (confirm('确定要从 V2EX 登出？')) { location.href= '${ctxPath}/signout'; }" class="top">登出</a>
                 <% } %>
                 <%
                 	else {
