--- a/v2ex-web/src/main/webapp/WEB-INF/views/index.html
+++ b/v2ex-web/src/main/webapp/WEB-INF/views/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="${ctxPath}/static/css/style.css" />
 </head>
 <body>
-<% include("head.html")%>
+<% include("head.html"){}%>
 <div id="Wrapper">
   <div class="content">
     <div id="Leftbar"></div>
