优化用户名以及邮件验证的方法

--- a/v2ex-web/src/main/webapp/WEB-INF/views/user_operation.html
+++ b/v2ex-web/src/main/webapp/WEB-INF/views/user_operation.html
@@ -56,7 +56,7 @@
                 </td>
                 <td width="10"></td>
                 <td width="auto" valign="middle" align="left">
-                  <a href="/new">创作新主题</a>
+                  <a href="${ctxPath}/topic/new">创作新主题</a>
                 </td>
               </tr>
             </tbody>
